# fred-tv-mobile

./: Cargo.toml  README.md  pubspec.yaml  template.toml
.github/workflows/: build-linux.yml  flatpak.yml  windows.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/open_tv/: MainActivity.kt
flatpak/: .gitignore  README.md  dev.fredol.fred-tv-next.desktop  dev.fredol.fred-tv-next.metainfo.xml  dev.fredol.fred-tv-next.yml  flatpak-flutter.yml  foreign.json
flatpak/modules/: mpv.yml
flutter/: .gitignore  README.md  pubspec.yaml
flutter/android/app/: build.gradle
flutter/android/app/src/main/: AndroidManifest.xml
flutter/android/app/src/main/kotlin/com/example/open_tv/: ExoPlayerView.kt  ExoPlayerViewFactory.kt  MainActivity.kt
flutter/android/app/src/main/res/drawable/: ic_exo_aspect_ratio.xml  ic_exo_audio.xml
flutter/android/app/src/main/res/layout/: custom_player_control_view.xml  exo_player_container.xml
flutter/android/app/src/main/res/values/: strings.xml
flutter/lib/: bottom_nav.dart  channel_tile.dart  confirm_delete.dart  correction_modal.dart  donate_view.dart  edit_dialog.dart  error.dart  exo_player.dart  home.dart  main.dart  menu_tile.dart  native_bridge.dart  player.dart  refresh_banner.dart  refresh_service.dart  select_dialog.dart  settings_view.dart  setup.dart  task_banner.dart  task_service.dart  tv_home.dart  utils.dart  whats_new_modal.dart
flutter/lib/backend/: m3u.dart  settings_service.dart  utils.dart  xtream.dart
flutter/lib/extensions/: int_extensions.dart  proto_extensions.dart
flutter/lib/models/: channel.dart  filters.dart  id_data.dart  media_type.dart  node_type.dart  proto_extensions.dart  settings.dart  sort_type.dart  source.dart  source_type.dart
flutter/linux/: CMakeLists.txt
flutter/windows/: CMakeLists.txt
flutter/windows/runner/: Runner.rc  main.cpp
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: bottom_nav.dart  channel_tile.dart  correction_modal.dart  default_view_dialog.dart  error.dart  home.dart  loading.dart  main.dart  menu_tile.dart  player.dart  select_dialog.dart  settings_view.dart  setup.dart  tv_home.dart  whats_new_modal.dart
lib/backend/: db_factory.dart  m3u.dart  settings_service.dart  sql.dart  utils.dart  xtream.dart
lib/models/: channel.dart  custom_shortcut.dart  filters.dart  home_manager.dart  node_type.dart  settings.dart  setup_server.dart  snapshot.dart  source.dart  source_type.dart  view_type.dart  xtream_types.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: api.dart  log.dart  m3u.dart  media_type.dart  settings.dart  sort_type.dart  source_type.dart  sql.dart  types.dart  utils.dart  view_type.dart  xtream.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
protocol/: generated_proto.proto
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: api.rs  log.rs  m3u.rs  media_type.rs  mod.rs  settings.rs  sort_type.rs  source_type.rs  sql.rs  types.rs  utils.rs  view_type.rs  xtream.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_open_tv.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_open_tv.podspec
rust_builder/windows/: CMakeLists.txt
setup-web-ui/: package.json  pnpm-lock.yaml
setup-web-ui/src/: app.css
setup-web-ui/src/routes/: +layout.svelte  +page.svelte
src/: c.rs  generated_proto.rs  lib.rs  log.rs  m3u.rs  settings.rs  sql.rs  types.rs  utils.rs  view_type.rs  xtream.rs
test/: widget_test.dart
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
