[package]
name = "fred-tv-lib"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
chrono = "0.4.45"
directories = "6.0.0"
log = "0.4.33"
prost = "0.14"
prost-types = "0.14.4"
r2d2 = "0.8.10"
r2d2_sqlite = "0.34.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
rusqlite_migration = "2.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "0.12.2"


# Install cargo-cmd:
# cargo install cargo-cmd
[package.metadata.commands]
build-android = "cargo ndk -t arm64-v8a -t armeabi-v7a -t x86_64 --platform 30 -o flutter/android/app/src/main/jniLibs build --release"
# install cbindgen, cargo install cbindgen
gen-header = "cbindgen --config ./template.toml --crate test-android --output out/lib.h"
# install protobuf, on windows: scoop install protobuf
gen-proto-rust = "protoc --prost_opt=flat_output_dir=true --prost_out=src -I ./protocol/ generated_proto.proto"
# needed: dart pub global activate protoc_plugin
gen-proto-dart = "protoc --dart_out=test_rust_flutter/lib/generated -I ./protocol/ generated_proto.proto"
ffigen = "cd test_rust_flutter && dart run ffigen"
