[package]
name = "rust_lib_open_tv"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.7.0"
serde_json = "1.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = { version = "1.0.95" }
regex = { version = "1.10.5", features = ["std"] }
directories = "5.0.1"
reqwest = {version = "0.12.12", features = ["json"]}
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"
r2d2_sqlite = "0.25.0"
r2d2 = "0.8.10"
bytes = "1.9.0"
chrono = "0.4.39"
simplelog = "0.12.2"
log = "0.4.22"
rusqlite_migration = "1.3.1"
base64 = "0.22.1"