[package]
name = "rust_lib_open_tv"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
rusqlite = { version = "0.32.1" }
anyhow = { version = "1.0.100" }
regex = { version = "1.12.2", features = ["std"] }
directories = "6.0.0"
reqwest = { version = "0.12.24", features = ["json"] }
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.7"
r2d2_sqlite = "0.25.0"
r2d2 = "0.8.10"
rusqlite_migration = "1.3.1"
chrono = "0.4.42"
simplelog = "0.12.2"
log = "0.4.28"
base64 = "0.22.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
